--- a/dependency-management.html
+++ b/dependency-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Continuous Integration</title>
+    <title>Project Dependency Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -84,8 +84,8 @@
                           <a href="project-summary.html" title="Project Summary">Project Summary</a>
             </li>
                       <li class="none">
-                          <a href="dependency-management.html" title="Dependency Management">Dependency Management</a>
-            </li>
+            <strong>Dependency Management</strong>
+          </li>
                       <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
             </li>
@@ -99,8 +99,8 @@
                           <a href="team-list.html" title="Project Team">Project Team</a>
             </li>
                       <li class="none">
-            <strong>Continuous Integration</strong>
-          </li>
+                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+            </li>
               </ul>
         </li>
                                                                                                         <li class="collapsed">
@@ -116,7 +116,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses Continuous Integration System.</p></div><div class="section"><h2>Access<a name="Access"></a></h2><a name="Access"></a><p>The following is a link to the continuous integration system used by the project.</p><div class="source"><pre><a class="externalLink" href="https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/">https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/</a></pre></div></div><div class="section"><h2>Notifiers<a name="Notifiers"></a></h2><a name="Notifiers"></a><p>No notifiers are defined. Please check back at a later date.</p></div>
+        <div class="section"><h2>Project Dependency Management<a name="Project_Dependency_Management"></a></h2><a name="Project_Dependency_Management"></a><div class="section"><h3>compile<a name="compile"></a></h3><a name="compile"></a><p>The following is a list of compile dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run the submodule:</p><table border="0" class="bodyTable"><tr class="a"><th>GroupId</th><th>ArtifactId</th><th>Version</th><th>Type</th></tr><tr class="b"><td>com.github.github</td><td><a class="externalLink" href="https://github.com/github/maven-plugins">downloads-maven-plugin</a></td><td>0.6</td><td>jar</td></tr><tr class="a"><td>info.cukes</td><td><a class="externalLink" href="http://cukes.info/cucumber-core/">cucumber-core</a></td><td>1.0.11</td><td>jar</td></tr><tr class="b"><td>junit</td><td><a class="externalLink" href="http://junit.org">junit</a></td><td>4.8.1</td><td>jar</td></tr><tr class="a"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-resources-plugin/">maven-resources-plugin</a></td><td>2.5</td><td>jar</td></tr><tr class="b"><td>org.codehaus.mojo</td><td><a class="externalLink" href="http://mojo.codehaus.org/build-helper-maven-plugin">build-helper-maven-plugin</a></td><td>1.7</td><td>jar</td></tr><tr class="a"><td>org.eclipse.tycho</td><td><a class="externalLink" href="https://repository.sonatype.org/content/sites/maven-sites/forge-parent/tycho/tycho-maven-plugin">tycho-maven-plugin</a></td><td>0.12.0</td><td>jar</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
