--- a/modules.html
+++ b/modules.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Continuous Integration</title>
+    <title>Project Modules</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -93,14 +93,14 @@
                           <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
-            </li>
+            <strong>Project Modules</strong>
+          </li>
                       <li class="none">
                           <a href="team-list.html" title="Project Team">Project Team</a>
             </li>
                       <li class="none">
-            <strong>Continuous Integration</strong>
-          </li>
+                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+            </li>
               </ul>
         </li>
                                                                                                         <li class="collapsed">
@@ -116,7 +116,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses Continuous Integration System.</p></div><div class="section"><h2>Access<a name="Access"></a></h2><a name="Access"></a><p>The following is a link to the continuous integration system used by the project.</p><div class="source"><pre><a class="externalLink" href="https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/">https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/</a></pre></div></div><div class="section"><h2>Notifiers<a name="Notifiers"></a></h2><a name="Notifiers"></a><p>No notifiers are defined. Please check back at a later date.</p></div>
+        <div class="section"><h2>Project Modules<a name="Project_Modules"></a></h2><a name="Project_Modules"></a><p>This project has declared the following modules:</p><table border="0" class="bodyTable"><tr class="a"><th>Name</th><th>Description</th></tr><tr class="b"><td><a href="module/">GitHub Maven Plugin Example - Module</a></td><td>-</td></tr><tr class="a"><td><a href="feature/">GitHub Maven Plugin Example - Feature</a></td><td>-</td></tr><tr class="b"><td><a href="updatesite/">GitHub Maven Plugin Example - Update Site</a></td><td>-</td></tr></table></div>
       </div>
     </div>
     <div class="clear">
