--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                GitHub Maven Plugin Example - Module
+                GitHub Maven Plugin Example - Feature
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2012-08-09</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Module">GitHub Maven Plugin Example - Module</a>
+            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Feature">GitHub Maven Plugin Example - Feature</a>
               
         
       </div>
@@ -94,7 +94,7 @@
             </li>
               </ul>
         </li>
-                                                                                      <li class="collapsed">
+                                                                    <li class="collapsed">
                           <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
@@ -107,7 +107,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>About GitHub Maven Plugin Example - Module<a name="About_GitHub_Maven_Plugin_Example_-_Module"></a></h2><a name="About_GitHub_Maven_Plugin_Example_-_Module"></a><p>Project to demonstrate GitHub Maven plugins</p></div>
+        <div class="section"><h2>About GitHub Maven Plugin Example - Feature<a name="About_GitHub_Maven_Plugin_Example_-_Feature"></a></h2><a name="About_GitHub_Maven_Plugin_Example_-_Feature"></a><p>Project to demonstrate GitHub Maven plugins</p></div>
       </div>
     </div>
     <div class="clear">
