--- a/project-summary.html
+++ b/project-summary.html
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                GitHub Maven Plugin Example - Module
+                GitHub Maven Plugin Example - Feature
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2012-08-09</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Module">GitHub Maven Plugin Example - Module</a>
+            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Feature">GitHub Maven Plugin Example - Feature</a>
               
         
       </div>
@@ -94,7 +94,7 @@
             </li>
               </ul>
         </li>
-                                                                                      <li class="collapsed">
+                                                                    <li class="collapsed">
                           <a href="project-reports.html" title="Project Reports">Project Reports</a>
                   </li>
           </ul>
@@ -107,7 +107,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a><div class="section"><h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>GitHub Maven Plugin Example - Module</td></tr><tr class="a"><td>Description</td><td>Project to demonstrate GitHub Maven plugins</td></tr><tr class="b"><td>Homepage</td><td><a class="externalLink" href="https://github.com/funthomas424242/github-maven-example/module">https://github.com/funthomas424242/github-maven-example/module</a></td></tr></table></div><div class="section"><h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a><p>This project does not belong to an organization.</p></div><div class="section"><h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>GroupId</td><td>com.github.funthomas424242</td></tr><tr class="a"><td>ArtifactId</td><td>github-maven-example-module</td></tr><tr class="b"><td>Version</td><td>1.0.0-SNAPSHOT</td></tr><tr class="a"><td>Type</td><td>eclipse-plugin</td></tr></table></div></div>
+        <div class="section"><h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a><div class="section"><h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>GitHub Maven Plugin Example - Feature</td></tr><tr class="a"><td>Description</td><td>Project to demonstrate GitHub Maven plugins</td></tr><tr class="b"><td>Homepage</td><td><a class="externalLink" href="https://github.com/funthomas424242/github-maven-example/feature">https://github.com/funthomas424242/github-maven-example/feature</a></td></tr></table></div><div class="section"><h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a><p>This project does not belong to an organization.</p></div><div class="section"><h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>GroupId</td><td>com.github.funthomas424242</td></tr><tr class="a"><td>ArtifactId</td><td>github-maven-example-feature</td></tr><tr class="b"><td>Version</td><td>1.0.0-SNAPSHOT</td></tr><tr class="a"><td>Type</td><td>eclipse-feature</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
