--- a/modules.html
+++ b/modules.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Project Dependencies</title>
+    <title>Project Modules</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -81,14 +81,14 @@
                           <a href="dependency-management.html" title="Dependency Management">Dependency Management</a>
             </li>
                       <li class="none">
-            <strong>Dependencies</strong>
-          </li>
+                          <a href="dependencies.html" title="Dependencies">Dependencies</a>
+            </li>
                       <li class="none">
                           <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
-            </li>
+            <strong>Project Modules</strong>
+          </li>
                       <li class="none">
                           <a href="team-list.html" title="Project Team">Project Team</a>
             </li>
@@ -110,7 +110,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <a name="Project_Dependencies"></a><div class="section"><h2>Project Dependencies<a name="Project_Dependencies"></a></h2><p>There are no dependencies for this project. It is a standalone application that does not depend on any other project.</p></div>
+        <div class="section"><h2>Project Modules<a name="Project_Modules"></a></h2><a name="Project_Modules"></a><p>This project has declared the following modules:</p><table border="0" class="bodyTable"><tr class="a"><th>Name</th><th>Description</th></tr><tr class="b"><td><a href="module/">GitHub Maven Plugin Example - Module</a></td><td>-</td></tr></table></div>
       </div>
     </div>
     <div class="clear">
