--- a/source-repository.html
+++ b/source-repository.html
@@ -44,16 +44,8 @@
       <div id="navcolumn">
              
                 
-                                <h5>Modules</h5>
-                  <ul>
-                  <li class="none">
-                          <a href="github-maven-example-module/index.html" title="GitHub Maven Plugin Example - Module">GitHub Maven Plugin Example - Module</a>
-            </li>
-                  <li class="none">
-                          <a href="github-maven-example-feature/index.html" title="GitHub Maven Plugin Example - Feature">GitHub Maven Plugin Example - Feature</a>
-            </li>
-          </ul>
-                       <h5>My Inherited Menu</h5>
+                                <h5>My Inherited Menu</h5>
+                                 <h5>My Inherited Menu</h5>
                                                                                                                              <a href="http://maven.apache.org/" title="Maven" class="poweredBy">
         <img class="poweredBy"  alt="Maven" src="http://maven.apache.org/images/logos/maven-feather.png"    />
       </a>
@@ -63,7 +55,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses a Source Content Management System to manage its source code.</p></div><div class="section"><h2>Web Access<a name="Web_Access"></a></h2><a name="Web_Access"></a><p>The following is a link to the online source repository.</p><div class="source"><pre><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example">https://github.com/FunThomas424242/github-maven-example</a></pre></div></div><div class="section"><h2>Anonymous access<a name="Anonymous_access"></a></h2><a name="Anonymous_access"></a><p>Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:</p><div class="source"><pre>git:git://github.com/funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Developer access<a name="Developer_access"></a></h2><a name="Developer_access"></a><p>Refer to the documentation of the SCM used for more information about developer check out. The connection url is:</p><div class="source"><pre>git:git@github.com:funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Access from behind a firewall<a name="Access_from_behind_a_firewall"></a></h2><a name="Access_from_behind_a_firewall"></a><p>Refer to the documentation of the SCM used for more information about access behind a firewall.</p></div>
+        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses a Source Content Management System to manage its source code.</p></div><div class="section"><h2>Web Access<a name="Web_Access"></a></h2><a name="Web_Access"></a><p>The following is a link to the online source repository.</p><div class="source"><pre><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example/github-maven-example-module">https://github.com/FunThomas424242/github-maven-example/github-maven-example-module</a></pre></div></div><div class="section"><h2>Anonymous access<a name="Anonymous_access"></a></h2><a name="Anonymous_access"></a><p>Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:</p><div class="source"><pre>git:git://github.com/funthomas424242/github-maven-example.git/github-maven-example-module</pre></div></div><div class="section"><h2>Developer access<a name="Developer_access"></a></h2><a name="Developer_access"></a><p>Refer to the documentation of the SCM used for more information about developer check out. The connection url is:</p><div class="source"><pre>git:git@github.com:funthomas424242/github-maven-example.git/github-maven-example-module</pre></div></div><div class="section"><h2>Access from behind a firewall<a name="Access_from_behind_a_firewall"></a></h2><a name="Access_from_behind_a_firewall"></a><p>Refer to the documentation of the SCM used for more information about access behind a firewall.</p></div>
       </div>
     </div>
     <div class="clear">
