Building site for 1.0.0-SNAPSHOT

--- a/feature/index.html
+++ b/feature/index.html
@@ -46,20 +46,19 @@
       <div id="navcolumn">
              
                 
-                                <h5>My Inherited Menu</h5>
-                                 <h5>Project Links</h5>
+                                <h5>Project Links</h5>
                   <ul>
-                                                                                                      <li class="expanded">
-            <strong>Home</strong>
-                  <ul>
+                                                                                                            <li class="expanded">
+                          <a href="../index.html" title="Parent">Parent</a>
+                    <ul>
                       <li class="none">
-                          <a href="module/index.html" title="Module">Module</a>
+                          <a href="../module/index.html" title="Module">Module</a>
             </li>
                       <li class="none">
-                          <a href="feature/index.html" title="Feature">Feature</a>
-            </li>
+            <strong>Feature</strong>
+          </li>
                       <li class="none">
-                          <a href="updatesite/index.html" title="Update Site">Update Site</a>
+                          <a href="../updatesite/index.html" title="Update Site">Update Site</a>
             </li>
               </ul>
         </li>
