--- a/feature/license.html
+++ b/feature/license.html
@@ -44,20 +44,19 @@
       <div id="navcolumn">
              
                 
-                                <h5>My Inherited Menu</h5>
-                                 <h5>Project Links</h5>
+                                <h5>Project Links</h5>
                   <ul>
                                                                                                   <li class="expanded">
-                          <a href="index.html" title="Home">Home</a>
+                          <a href="../index.html" title="Parent">Parent</a>
                     <ul>
                       <li class="none">
-                          <a href="module/index.html" title="Module">Module</a>
+                          <a href="../module/index.html" title="Module">Module</a>
             </li>
                       <li class="none">
-                          <a href="feature/index.html" title="Feature">Feature</a>
+                          <a href="index.html" title="Feature">Feature</a>
             </li>
                       <li class="none">
-                          <a href="updatesite/index.html" title="Update Site">Update Site</a>
+                          <a href="../updatesite/index.html" title="Update Site">Update Site</a>
             </li>
               </ul>
         </li>
