--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
                 
                                 <h5>Project Links</h5>
                   <ul>
-                                                                                                      <li class="expanded">
-            <strong>Parent</strong>
-                  <ul>
+                                                                                                            <li class="expanded">
+                          <a href="../index.html" title="Parent">Parent</a>
+                    <ul>
                       <li class="none">
-                          <a href="module/index.html" title="Module">Module</a>
+                          <a href="../module/index.html" title="Module">Module</a>
             </li>
                       <li class="none">
-                          <a href="feature/index.html" title="Feature">Feature</a>
+                          <a href="../feature/index.html" title="Feature">Feature</a>
             </li>
                       <li class="none">
-                          <a href="updatesite/index.html" title="Update Site">Update Site</a>
-            </li>
+            <strong>Update Site</strong>
+          </li>
               </ul>
         </li>
           </ul>
