Building site for 1.0.0-SNAPSHOT

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>
-        Test Plugin</title>
+        Parent Project</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -48,18 +48,18 @@
                 
                                 <h5>Project Links</h5>
                   <ul>
-                                                                                                            <li class="expanded">
-                          <a href="../index.html" title="Parent">Parent</a>
-                    <ul>
+                                                                                                      <li class="expanded">
+            <strong>Parent</strong>
+                  <ul>
                       <li class="none">
-                          <a href="../module/index.html" title="Module">Module</a>
+                          <a href="module/index.html" title="Module">Module</a>
             </li>
                       <li class="none">
-                          <a href="../feature/index.html" title="Feature">Feature</a>
+                          <a href="feature/index.html" title="Feature">Feature</a>
             </li>
                       <li class="none">
-            <strong>Update Site</strong>
-          </li>
+                          <a href="updatesite/index.html" title="Update Site">Update Site</a>
+            </li>
               </ul>
         </li>
           </ul>
