--- a/module/index.html
+++ b/module/index.html
@@ -81,7 +81,7 @@
         
     
 
-        <div class="section"><h2>Test<a name="Test"></a></h2>
+        <div class="section"><h2>Module<a name="Module"></a></h2>
             <p>
                test
             </p>
