Building site for 1.0.0-SNAPSHOT

--- a/updatesite/index.html
+++ b/updatesite/index.html
@@ -81,7 +81,7 @@
         
     
 
-        <div class="section"><h2>Test<a name="Test"></a></h2>
+        <div class="section"><h2>UpdateSite<a name="UpdateSite"></a></h2>
             <p>
                test
             </p>
