--- a/distribution-management.html
+++ b/distribution-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Source Repository</title>
+    <title>Project Distribution Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -73,8 +73,8 @@
                           <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
-            <strong>Source Repository</strong>
-          </li>
+                          <a href="source-repository.html" title="Source Repository">Source Repository</a>
+            </li>
                       <li class="none">
                           <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
             </li>
@@ -82,8 +82,8 @@
                           <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
             </li>
                       <li class="none">
-                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
-            </li>
+            <strong>Distribution Management</strong>
+          </li>
                       <li class="none">
                           <a href="team-list.html" title="Project Team">Project Team</a>
             </li>
@@ -102,7 +102,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses a Source Content Management System to manage its source code.</p></div><div class="section"><h2>Web Access<a name="Web_Access"></a></h2><a name="Web_Access"></a><p>The following is a link to the online source repository.</p><div class="source"><pre><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example">https://github.com/FunThomas424242/github-maven-example</a></pre></div></div><div class="section"><h2>Anonymous access<a name="Anonymous_access"></a></h2><a name="Anonymous_access"></a><p>Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:</p><div class="source"><pre>git:git://github.com/funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Developer access<a name="Developer_access"></a></h2><a name="Developer_access"></a><p>Refer to the documentation of the SCM used for more information about developer check out. The connection url is:</p><div class="source"><pre>git:git@github.com:funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Access from behind a firewall<a name="Access_from_behind_a_firewall"></a></h2><a name="Access_from_behind_a_firewall"></a><p>Refer to the documentation of the SCM used for more information about access behind a firewall.</p></div>
+        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>The following is the distribution management information used by this project.</p><div class="section"><h3>Download URL<a name="Download_URL"></a></h3><a name="Download_URL"></a><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example/downloads">https://github.com/FunThomas424242/github-maven-example/downloads</a></div><div class="section"><h3>Repository - cloudbees-releases<a name="Repository_-_cloudbees-releases"></a></h3><a name="Repository_-_cloudbees-releases"></a><a class="externalLink" href="https://repository-funthomas424242.forge.cloudbees.com/release/">https://repository-funthomas424242.forge.cloudbees.com/release/</a></div><div class="section"><h3>Snapshot Repository - cloudbees-snapshots<a name="Snapshot_Repository_-_cloudbees-snapshots"></a></h3><a name="Snapshot_Repository_-_cloudbees-snapshots"></a><a class="externalLink" href="https://repository-funthomas424242.forge.cloudbees.com/snapshot/">https://repository-funthomas424242.forge.cloudbees.com/snapshot/</a></div><div class="section"><h3>Site - github<a name="Site_-_github"></a></h3><a name="Site_-_github"></a><a class="externalLink" href="http://github.com/FunThomas424242/github-maven-example/">http://github.com/FunThomas424242/github-maven-example/</a></div></div>
       </div>
     </div>
     <div class="clear">
