--- a/integration.html
+++ b/integration.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Source Repository</title>
+    <title>Continuous Integration</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -73,11 +73,11 @@
                           <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
-            <strong>Source Repository</strong>
-          </li>
-                      <li class="none">
-                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+                          <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
+                      <li class="none">
+            <strong>Continuous Integration</strong>
+          </li>
                       <li class="none">
                           <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
             </li>
@@ -102,7 +102,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses a Source Content Management System to manage its source code.</p></div><div class="section"><h2>Web Access<a name="Web_Access"></a></h2><a name="Web_Access"></a><p>The following is a link to the online source repository.</p><div class="source"><pre><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example">https://github.com/FunThomas424242/github-maven-example</a></pre></div></div><div class="section"><h2>Anonymous access<a name="Anonymous_access"></a></h2><a name="Anonymous_access"></a><p>Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:</p><div class="source"><pre>git:git://github.com/funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Developer access<a name="Developer_access"></a></h2><a name="Developer_access"></a><p>Refer to the documentation of the SCM used for more information about developer check out. The connection url is:</p><div class="source"><pre>git:git@github.com:funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Access from behind a firewall<a name="Access_from_behind_a_firewall"></a></h2><a name="Access_from_behind_a_firewall"></a><p>Refer to the documentation of the SCM used for more information about access behind a firewall.</p></div>
+        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses <a class="externalLink" href="http://jenkins-ci.org/">Jenkins</a>.</p></div><div class="section"><h2>Access<a name="Access"></a></h2><a name="Access"></a><p>The following is a link to the continuous integration system used by the project.</p><div class="source"><pre><a class="externalLink" href="https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/">https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/</a></pre></div></div><div class="section"><h2>Notifiers<a name="Notifiers"></a></h2><a name="Notifiers"></a><p>No notifiers are defined. Please check back at a later date.</p></div>
       </div>
     </div>
     <div class="clear">
