--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Source Repository</title>
+    <title>Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -67,14 +67,14 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
-            </li>
+            <strong>Project Summary</strong>
+          </li>
                       <li class="none">
                           <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
-            <strong>Source Repository</strong>
-          </li>
+                          <a href="source-repository.html" title="Source Repository">Source Repository</a>
+            </li>
                       <li class="none">
                           <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
             </li>
@@ -102,7 +102,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses a Source Content Management System to manage its source code.</p></div><div class="section"><h2>Web Access<a name="Web_Access"></a></h2><a name="Web_Access"></a><p>The following is a link to the online source repository.</p><div class="source"><pre><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example">https://github.com/FunThomas424242/github-maven-example</a></pre></div></div><div class="section"><h2>Anonymous access<a name="Anonymous_access"></a></h2><a name="Anonymous_access"></a><p>Refer to the documentation of the SCM used for more information about anonymously check out. The connection url is:</p><div class="source"><pre>git:git://github.com/funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Developer access<a name="Developer_access"></a></h2><a name="Developer_access"></a><p>Refer to the documentation of the SCM used for more information about developer check out. The connection url is:</p><div class="source"><pre>git:git@github.com:funthomas424242/github-maven-example.git</pre></div></div><div class="section"><h2>Access from behind a firewall<a name="Access_from_behind_a_firewall"></a></h2><a name="Access_from_behind_a_firewall"></a><p>Refer to the documentation of the SCM used for more information about access behind a firewall.</p></div>
+        <div class="section"><h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a><div class="section"><h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>GitHub Maven Plugin Example</td></tr><tr class="a"><td>Description</td><td>Project to demonstrate GitHub Maven plugins</td></tr><tr class="b"><td>Homepage</td><td><a class="externalLink" href="http://funthomas424242.github.com/github-maven-example">http://funthomas424242.github.com/github-maven-example</a></td></tr></table></div><div class="section"><h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a><p>This project does not belong to an organization.</p></div><div class="section"><h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>GroupId</td><td>com.github.funthomas424242</td></tr><tr class="a"><td>ArtifactId</td><td>github-maven-example</td></tr><tr class="b"><td>Version</td><td>1.0.0-SNAPSHOT</td></tr><tr class="a"><td>Type</td><td>pom</td></tr></table></div><div class="section"><h3>Download<a name="Download"></a></h3><a name="Download"></a><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example/downloads">https://github.com/FunThomas424242/github-maven-example/downloads</a></div></div>
       </div>
     </div>
     <div class="clear">
